fix: large dialog width on mobile view

--- a/packages/web-components/src/components/va-modal/va-modal.scss
+++ b/packages/web-components/src/components/va-modal/va-modal.scss
@@ -342,6 +342,11 @@ i::before {
   .va-modal-alert .alert-actions button + button {
     margin: 1.6rem 0 0 0;
   }
+
+  .usa-modal--lg .usa-modal__main {
+    max-width: -webkit-fill-available;
+    max-width: -moz-fit-content;
+  }
 }
 
 :host([large]:not([large='false'])) .va-modal-inner {
